Update release notes

--- a/v1.20.3.md
+++ b/v1.20.3.md
@@ -14,14 +14,14 @@
 # CRI-O v1.20.3
 
 The release notes have been generated for the commit range
-[v1.20.2...0addf34](https://github.com/cri-o/cri-o/compare/v1.20.2...0addf344487714f41d0134c3c53263beb29d232a) on Mon, 12 Jul 2021 07:04:43 UTC.
+[v1.20.2...5212621](https://github.com/cri-o/cri-o/compare/v1.20.2...52126218773e74abb6d3b92f431300a217da5ed8) on Wed, 14 Jul 2021 18:40:59 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.0addf344487714f41d0134c3c53263beb29d232a.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.0addf344487714f41d0134c3c53263beb29d232a.tar.gz)
-- [cri-o.arm64.0addf344487714f41d0134c3c53263beb29d232a.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.0addf344487714f41d0134c3c53263beb29d232a.tar.gz)
+- [cri-o.amd64.52126218773e74abb6d3b92f431300a217da5ed8.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.52126218773e74abb6d3b92f431300a217da5ed8.tar.gz)
+- [cri-o.arm64.52126218773e74abb6d3b92f431300a217da5ed8.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.52126218773e74abb6d3b92f431300a217da5ed8.tar.gz)
 
 ## Changelog since v1.20.2
 
@@ -38,6 +38,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - ExecSync requests now don't use conmon, instead calling the runtime directly, which reduces overhead. ([#4954](https://github.com/cri-o/cri-o/pull/4954), [@saschagrunert](https://github.com/saschagrunert))
  - Fix a bug where CRI-O prematurely stopped pulling from a blocked registry, even if there was a mirror for that registry it was allowed to pull from. ([#5034](https://github.com/cri-o/cri-o/pull/5034), [@haircommander](https://github.com/haircommander))
  - Fix a couple of FD leaks when pulling images ([#4815](https://github.com/cri-o/cri-o/pull/4815), [@haircommander](https://github.com/haircommander))
+ - Fixed runtime panic if container storage layers lockfile parent directory got removed. ([#5072](https://github.com/cri-o/cri-o/pull/5072), [@saschagrunert](https://github.com/saschagrunert))
  - Reuse connection when connecting to dbus, as well as reattempt the connection if it fails temporarily ([#5058](https://github.com/cri-o/cri-o/pull/5058), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
@@ -53,7 +54,7 @@ _Nothing has changed._
 ### Changed
 - github.com/containers/common: [v0.21.0 → v0.26.3](https://github.com/containers/common/compare/v0.21.0...v0.26.3)
 - github.com/containers/image/v5: [v5.10.1 → v5.10.6](https://github.com/containers/image/v5/compare/v5.10.1...v5.10.6)
-- github.com/containers/storage: [e00c943 → aa7e38b](https://github.com/containers/storage/compare/e00c943...aa7e38b)
+- github.com/containers/storage: [e00c943 → 2ba85b4](https://github.com/containers/storage/compare/e00c943...2ba85b4)
 - github.com/cri-o/ocicni: [513ef78 → 4ea5fb8](https://github.com/cri-o/ocicni/compare/513ef78...4ea5fb8)
 - github.com/onsi/ginkgo: [v1.14.1 → v1.14.2](https://github.com/onsi/ginkgo/compare/v1.14.1...v1.14.2)
 
