--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...acd0f73](https://github.com/cri-o/cri-o/compare/v1.21.0...acd0f734f0c24e75f5c18d1ddc743df200452838) on Wed, 14 Jul 2021 13:20:19 UTC.
+[v1.21.0...f2dcf32](https://github.com/cri-o/cri-o/compare/v1.21.0...f2dcf32491d92cefb28975fe859a7f0161a2240b) on Wed, 14 Jul 2021 23:25:53 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.acd0f734f0c24e75f5c18d1ddc743df200452838.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.acd0f734f0c24e75f5c18d1ddc743df200452838.tar.gz)
-- [cri-o.arm64.acd0f734f0c24e75f5c18d1ddc743df200452838.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.acd0f734f0c24e75f5c18d1ddc743df200452838.tar.gz)
+- [cri-o.amd64.f2dcf32491d92cefb28975fe859a7f0161a2240b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.f2dcf32491d92cefb28975fe859a7f0161a2240b.tar.gz)
+- [cri-o.arm64.f2dcf32491d92cefb28975fe859a7f0161a2240b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.f2dcf32491d92cefb28975fe859a7f0161a2240b.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -178,7 +178,10 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/olekukonko/tablewriter: [v0.0.4 → v0.0.5](https://github.com/olekukonko/tablewriter/compare/v0.0.4...v0.0.5)
 - github.com/onsi/ginkgo: [v1.15.2 → v1.16.4](https://github.com/onsi/ginkgo/compare/v1.15.2...v1.16.4)
 - github.com/onsi/gomega: [v1.11.0 → v1.14.0](https://github.com/onsi/gomega/compare/v1.11.0...v1.14.0)
+- github.com/opencontainers/image-spec: [79b036d → 083f635](https://github.com/opencontainers/image-spec/compare/79b036d...083f635)
 - github.com/opencontainers/runc: [v1.0.0-rc93 → a95237f](https://github.com/opencontainers/runc/compare/v1.0.0-rc93...a95237f)
+- github.com/opencontainers/runtime-spec: [7413a7f → 8961758](https://github.com/opencontainers/runtime-spec/compare/7413a7f...8961758)
+- github.com/opencontainers/runtime-tools: [d1bf3e6 → 59cdde0](https://github.com/opencontainers/runtime-tools/compare/d1bf3e6...59cdde0)
 - github.com/opencontainers/selinux: [v1.8.0 → v1.8.2](https://github.com/opencontainers/selinux/compare/v1.8.0...v1.8.2)
 - github.com/openshift/imagebuilder: [v1.2.0 → 87f3e48](https://github.com/openshift/imagebuilder/compare/v1.2.0...87f3e48)
 - github.com/pelletier/go-toml: [v1.2.0 → v1.8.1](https://github.com/pelletier/go-toml/compare/v1.2.0...v1.8.1)
