--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...de5e0fe](https://github.com/cri-o/cri-o/compare/v1.21.0...de5e0fe1065b79f61628c8fbdf2e1204faa43602) on Thu, 15 Jul 2021 15:11:17 UTC.
+[v1.21.0...4d14fd6](https://github.com/cri-o/cri-o/compare/v1.21.0...4d14fd61d2d533a0bb81557b54d3505be830efa7) on Thu, 15 Jul 2021 21:12:59 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.de5e0fe1065b79f61628c8fbdf2e1204faa43602.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.de5e0fe1065b79f61628c8fbdf2e1204faa43602.tar.gz)
-- [cri-o.arm64.de5e0fe1065b79f61628c8fbdf2e1204faa43602.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.de5e0fe1065b79f61628c8fbdf2e1204faa43602.tar.gz)
+- [cri-o.amd64.4d14fd61d2d533a0bb81557b54d3505be830efa7.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.4d14fd61d2d533a0bb81557b54d3505be830efa7.tar.gz)
+- [cri-o.arm64.4d14fd61d2d533a0bb81557b54d3505be830efa7.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.4d14fd61d2d533a0bb81557b54d3505be830efa7.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -74,6 +74,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Reduce the permission on the listen socket to 0660 ([#4886](https://github.com/cri-o/cri-o/pull/4886), [@haircommander](https://github.com/haircommander))
  - Reuse connection when connecting to dbus, as well as reattempt the connection if it fails temporarily ([#4974](https://github.com/cri-o/cri-o/pull/4974), [@haircommander](https://github.com/haircommander))
  - The privileged_without_host_devices flag can now be given a an additional parameter to configure a runtime ([#5054](https://github.com/cri-o/cri-o/pull/5054), [@littlejawa](https://github.com/littlejawa))
+ - Wait for CNI plugins to be ready before starting non-host-network pods, to allow pods that may run CNI plugins to start faster ([#5046](https://github.com/cri-o/cri-o/pull/5046), [@haircommander](https://github.com/haircommander))
 
 #### Other (Cleanup or Flake)
  - Add systemd After=crio.service to containers and conmon ([#4766](https://github.com/cri-o/cri-o/pull/4766), [@mrunalp](https://github.com/mrunalp))
