--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...1309dd2](https://github.com/cri-o/cri-o/compare/v1.21.0...1309dd232a1b92b46ff295a0c4c86972ca63b3ab) on Fri, 16 Jul 2021 10:11:21 UTC.
+[v1.21.0...cd1c5a0](https://github.com/cri-o/cri-o/compare/v1.21.0...cd1c5a0b69bda4a0e4c7b3de1841bc90e08a88ef) on Fri, 16 Jul 2021 18:25:39 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.1309dd232a1b92b46ff295a0c4c86972ca63b3ab.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.1309dd232a1b92b46ff295a0c4c86972ca63b3ab.tar.gz)
-- [cri-o.arm64.1309dd232a1b92b46ff295a0c4c86972ca63b3ab.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.1309dd232a1b92b46ff295a0c4c86972ca63b3ab.tar.gz)
+- [cri-o.amd64.cd1c5a0b69bda4a0e4c7b3de1841bc90e08a88ef.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.cd1c5a0b69bda4a0e4c7b3de1841bc90e08a88ef.tar.gz)
+- [cri-o.arm64.cd1c5a0b69bda4a0e4c7b3de1841bc90e08a88ef.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.cd1c5a0b69bda4a0e4c7b3de1841bc90e08a88ef.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -63,6 +63,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where CRI-O can't work with runc 1.0.0-rc93 because of an incorrectly specified list of capabilities ([#4828](https://github.com/cri-o/cri-o/pull/4828), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O would leak opened files for namespaces on a server restore ([#4758](https://github.com/cri-o/cri-o/pull/4758), [@haircommander](https://github.com/haircommander))
  - Fix a bug where `crio config` would print a string for `privileged_without_host_devices`, not a boolean ([#4827](https://github.com/cri-o/cri-o/pull/4827), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where a container exec process received a little less time than the timeout provided ([#5067](https://github.com/cri-o/cri-o/pull/5067), [@haircommander](https://github.com/haircommander))
  - Fix a bug where an exec sync timeout would fail to cleanup the runtime exec process ([#4999](https://github.com/cri-o/cri-o/pull/4999), [@haircommander](https://github.com/haircommander))
  - Fix a bug where server startup was significantly slowed down by attempting to clean up CNI resources after a reboot. ([#4929](https://github.com/cri-o/cri-o/pull/4929), [@haircommander](https://github.com/haircommander))
  - Fix a segfault when CRI-O has takes more than 8 minutes to create a pod or container ([#4834](https://github.com/cri-o/cri-o/pull/4834), [@haircommander](https://github.com/haircommander))
@@ -116,6 +117,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/moby/locker: [v1.0.1](https://github.com/moby/locker/tree/v1.0.1)
 - github.com/nwaples/rardecode: [v1.1.0](https://github.com/nwaples/rardecode/tree/v1.1.0)
 - github.com/pierrec/lz4/v4: [v4.0.3](https://github.com/pierrec/lz4/v4/tree/v4.0.3)
+- github.com/rjeczalik/notify: [v0.9.2](https://github.com/rjeczalik/notify/tree/v0.9.2)
 - github.com/spiegel-im-spiegel/errs: [v1.0.2](https://github.com/spiegel-im-spiegel/errs/tree/v1.0.2)
 - github.com/spiegel-im-spiegel/go-cvss: [v0.4.0](https://github.com/spiegel-im-spiegel/go-cvss/tree/v0.4.0)
 - github.com/vbauerster/mpb/v7: [v7.0.2](https://github.com/vbauerster/mpb/v7/tree/v7.0.2)
