Update release notes

--- a/v1.21.1.md
+++ b/v1.21.1.md
@@ -15,14 +15,14 @@
 # CRI-O v1.21.1
 
 The release notes have been generated for the commit range
-[v1.21.0...8d20153](https://github.com/cri-o/cri-o/compare/v1.21.0...8d2015333c7da5d697939bcab352c305e3a19851) on Thu, 08 Jul 2021 21:07:57 UTC.
+[v1.21.0...f97bf4d](https://github.com/cri-o/cri-o/compare/v1.21.0...f97bf4d9b364e67ca3e97cae360ff1baa3e7b22c) on Fri, 16 Jul 2021 20:57:51 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.8d2015333c7da5d697939bcab352c305e3a19851.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.8d2015333c7da5d697939bcab352c305e3a19851.tar.gz)
-- [cri-o.arm64.8d2015333c7da5d697939bcab352c305e3a19851.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.8d2015333c7da5d697939bcab352c305e3a19851.tar.gz)
+- [cri-o.amd64.f97bf4d9b364e67ca3e97cae360ff1baa3e7b22c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.f97bf4d9b364e67ca3e97cae360ff1baa3e7b22c.tar.gz)
+- [cri-o.arm64.f97bf4d9b364e67ca3e97cae360ff1baa3e7b22c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.f97bf4d9b364e67ca3e97cae360ff1baa3e7b22c.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -60,6 +60,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fixed bug where runtime VM created containers never reach their `completed` state. ([#4812](https://github.com/cri-o/cri-o/pull/4812), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Reduce the permission on the listen socket to 0660 ([#4930](https://github.com/cri-o/cri-o/pull/4930), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Update how the resources for a workload is specified. Now, to override a workload, the pod must have the annotation `$prefix/$ctr_name = {"$resource_type": "$resource_value"}`. The workloads feature has also been marked as experimental, which should have happened from the beginning. ([#4811](https://github.com/cri-o/cri-o/pull/4811), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Wait for CNI plugins to be ready before starting non-host-network pods, to allow pods that may run CNI plugins to start faster ([#5084](https://github.com/cri-o/cri-o/pull/5084), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
 
