--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...cd1c5a0](https://github.com/cri-o/cri-o/compare/v1.21.0...cd1c5a0b69bda4a0e4c7b3de1841bc90e08a88ef) on Fri, 16 Jul 2021 18:35:47 UTC.
+[v1.21.0...c969a38](https://github.com/cri-o/cri-o/compare/v1.21.0...c969a387c1f107bca7cc2c0dfa5162e5d104093f) on Fri, 16 Jul 2021 22:07:05 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.cd1c5a0b69bda4a0e4c7b3de1841bc90e08a88ef.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.cd1c5a0b69bda4a0e4c7b3de1841bc90e08a88ef.tar.gz)
-- [cri-o.arm64.cd1c5a0b69bda4a0e4c7b3de1841bc90e08a88ef.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.cd1c5a0b69bda4a0e4c7b3de1841bc90e08a88ef.tar.gz)
+- [cri-o.amd64.c969a387c1f107bca7cc2c0dfa5162e5d104093f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c969a387c1f107bca7cc2c0dfa5162e5d104093f.tar.gz)
+- [cri-o.arm64.c969a387c1f107bca7cc2c0dfa5162e5d104093f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c969a387c1f107bca7cc2c0dfa5162e5d104093f.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -39,6 +39,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Update how the resources for a workload is specified. Now, to override a workload, the pod must have the annotation `$prefix/$ctr_name = {"$resource_type": "$resource_value"}`. The workloads feature has also been marked as experimental, which should have happened from the beginning. ([#4787](https://github.com/cri-o/cri-o/pull/4787), [@haircommander](https://github.com/haircommander))
 
 #### Feature
+ - Added `-metrics-collectors`/`metrics_collectors` configuration to enable or disable certain metrics.
+  All metrics collectors are enabled per default. ([#5061](https://github.com/cri-o/cri-o/pull/5061), [@saschagrunert](https://github.com/saschagrunert))
  - Added `crio_image_pulls_layer_size` histogram metric to get insights about all pulled layer sizes. ([#5059](https://github.com/cri-o/cri-o/pull/5059), [@saschagrunert](https://github.com/saschagrunert))
  - Added generation of self-signed certificates for the secure metrics endpoint
   if the provided cert and key paths are not available on disk. ([#5012](https://github.com/cri-o/cri-o/pull/5012), [@saschagrunert](https://github.com/saschagrunert))
