Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...c969a38](https://github.com/cri-o/cri-o/compare/v1.21.0...c969a387c1f107bca7cc2c0dfa5162e5d104093f) on Fri, 16 Jul 2021 22:07:05 UTC.
+[v1.21.0...e00180d](https://github.com/cri-o/cri-o/compare/v1.21.0...e00180da725e624041127452143365d0ad90a655) on Fri, 16 Jul 2021 23:48:12 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.c969a387c1f107bca7cc2c0dfa5162e5d104093f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c969a387c1f107bca7cc2c0dfa5162e5d104093f.tar.gz)
-- [cri-o.arm64.c969a387c1f107bca7cc2c0dfa5162e5d104093f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c969a387c1f107bca7cc2c0dfa5162e5d104093f.tar.gz)
+- [cri-o.amd64.e00180da725e624041127452143365d0ad90a655.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.e00180da725e624041127452143365d0ad90a655.tar.gz)
+- [cri-o.arm64.e00180da725e624041127452143365d0ad90a655.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.e00180da725e624041127452143365d0ad90a655.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -67,6 +67,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where `crio config` would print a string for `privileged_without_host_devices`, not a boolean ([#4827](https://github.com/cri-o/cri-o/pull/4827), [@haircommander](https://github.com/haircommander))
  - Fix a bug where a container exec process received a little less time than the timeout provided ([#5067](https://github.com/cri-o/cri-o/pull/5067), [@haircommander](https://github.com/haircommander))
  - Fix a bug where an exec sync timeout would fail to cleanup the runtime exec process ([#4999](https://github.com/cri-o/cri-o/pull/4999), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where duplicate requests would stall even if the pod or container was already created ([#5052](https://github.com/cri-o/cri-o/pull/5052), [@haircommander](https://github.com/haircommander))
  - Fix a bug where server startup was significantly slowed down by attempting to clean up CNI resources after a reboot. ([#4929](https://github.com/cri-o/cri-o/pull/4929), [@haircommander](https://github.com/haircommander))
  - Fix a segfault when CRI-O has takes more than 8 minutes to create a pod or container ([#4834](https://github.com/cri-o/cri-o/pull/4834), [@haircommander](https://github.com/haircommander))
  - Fix drop ALL and add back few caps behavior to not include the default configured capabilities ([#4923](https://github.com/cri-o/cri-o/pull/4923), [@mrunalp](https://github.com/mrunalp))
