Update release notes

--- a/v1.21.2.md
+++ b/v1.21.2.md
@@ -14,14 +14,14 @@
 # CRI-O v1.21.2
 
 The release notes have been generated for the commit range
-[v1.21.1...e929d72](https://github.com/cri-o/cri-o/compare/v1.21.1...e929d720fbab53ba5346f053048b752d383a9b9a) on Mon, 19 Jul 2021 08:57:52 UTC.
+[v1.21.1...aaefa6b](https://github.com/cri-o/cri-o/compare/v1.21.1...aaefa6b173f79384c6a2a627e5074a7f5b02957f) on Mon, 19 Jul 2021 11:14:23 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.e929d720fbab53ba5346f053048b752d383a9b9a.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.e929d720fbab53ba5346f053048b752d383a9b9a.tar.gz)
-- [cri-o.arm64.e929d720fbab53ba5346f053048b752d383a9b9a.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.e929d720fbab53ba5346f053048b752d383a9b9a.tar.gz)
+- [cri-o.amd64.aaefa6b173f79384c6a2a627e5074a7f5b02957f.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.aaefa6b173f79384c6a2a627e5074a7f5b02957f.tar.gz)
+- [cri-o.arm64.aaefa6b173f79384c6a2a627e5074a7f5b02957f.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.aaefa6b173f79384c6a2a627e5074a7f5b02957f.tar.gz)
 
 ## Changelog since v1.21.1
 
@@ -35,6 +35,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Bug or Regression
  - Allow users to customize conmon's resources if a pod is in a workload. ([#4980](https://github.com/cri-o/cri-o/pull/4980), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where a container exec process received a little less time than the timeout provided ([#5093](https://github.com/cri-o/cri-o/pull/5093), [@haircommander](https://github.com/haircommander))
  - Fixed "layer not known" issue during image pull for corrupted `layers.json` files. ([#5015](https://github.com/cri-o/cri-o/pull/5015), [@saschagrunert](https://github.com/saschagrunert))
  - Reuse connection when connecting to dbus, as well as reattempt the connection if it fails temporarily ([#4986](https://github.com/cri-o/cri-o/pull/4986), [@haircommander](https://github.com/haircommander))
 
@@ -47,6 +48,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 ### Added
 - github.com/bits-and-blooms/bitset: [v1.2.0](https://github.com/bits-and-blooms/bitset/tree/v1.2.0)
+- github.com/rjeczalik/notify: [v0.9.2](https://github.com/rjeczalik/notify/tree/v0.9.2)
 
 ### Changed
 - github.com/Microsoft/go-winio: [v0.4.17 → v0.5.0](https://github.com/Microsoft/go-winio/compare/v0.4.17...v0.5.0)
