--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...635b2d9](https://github.com/cri-o/cri-o/compare/v1.21.0...635b2d98dff9cdbbfd85d2448afa1627410659bd) on Sat, 17 Jul 2021 06:16:35 UTC.
+[v1.21.0...1cf63c7](https://github.com/cri-o/cri-o/compare/v1.21.0...1cf63c70073ac4469d12cf15d1740eb18cde8c93) on Mon, 19 Jul 2021 14:46:38 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.635b2d98dff9cdbbfd85d2448afa1627410659bd.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.635b2d98dff9cdbbfd85d2448afa1627410659bd.tar.gz)
-- [cri-o.arm64.635b2d98dff9cdbbfd85d2448afa1627410659bd.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.635b2d98dff9cdbbfd85d2448afa1627410659bd.tar.gz)
+- [cri-o.amd64.1cf63c70073ac4469d12cf15d1740eb18cde8c93.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.1cf63c70073ac4469d12cf15d1740eb18cde8c93.tar.gz)
+- [cri-o.arm64.1cf63c70073ac4469d12cf15d1740eb18cde8c93.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.1cf63c70073ac4469d12cf15d1740eb18cde8c93.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -39,7 +39,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Update how the resources for a workload is specified. Now, to override a workload, the pod must have the annotation `$prefix/$ctr_name = {"$resource_type": "$resource_value"}`. The workloads feature has also been marked as experimental, which should have happened from the beginning. ([#4787](https://github.com/cri-o/cri-o/pull/4787), [@haircommander](https://github.com/haircommander))
 
 #### Feature
- - Added `-metrics-collectors`/`metrics_collectors` configuration to enable or disable certain metrics.
+ - Added `--metrics-collectors`/`metrics_collectors` configuration to enable or disable certain metrics.
   All metrics collectors are enabled per default. ([#5061](https://github.com/cri-o/cri-o/pull/5061), [@saschagrunert](https://github.com/saschagrunert))
  - Added `crio_image_pulls_layer_size` histogram metric to get insights about all pulled layer sizes. ([#5059](https://github.com/cri-o/cri-o/pull/5059), [@saschagrunert](https://github.com/saschagrunert))
  - Added generation of self-signed certificates for the secure metrics endpoint
