Update release notes

--- a/v1.20.4.md
+++ b/v1.20.4.md
@@ -13,14 +13,14 @@
 # CRI-O v1.20.4
 
 The release notes have been generated for the commit range
-[v1.20.3...79071e9](https://github.com/cri-o/cri-o/compare/v1.20.3...79071e91782b63ebdbbe91457e5f0386297cdd1f) on Mon, 19 Jul 2021 07:08:47 UTC.
+[v1.20.3...f7276ed](https://github.com/cri-o/cri-o/compare/v1.20.3...f7276ed73e4921b23d554fb527f82fba6b602ad2) on Mon, 19 Jul 2021 17:10:01 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.79071e91782b63ebdbbe91457e5f0386297cdd1f.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.79071e91782b63ebdbbe91457e5f0386297cdd1f.tar.gz)
-- [cri-o.arm64.79071e91782b63ebdbbe91457e5f0386297cdd1f.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.79071e91782b63ebdbbe91457e5f0386297cdd1f.tar.gz)
+- [cri-o.amd64.f7276ed73e4921b23d554fb527f82fba6b602ad2.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.f7276ed73e4921b23d554fb527f82fba6b602ad2.tar.gz)
+- [cri-o.arm64.f7276ed73e4921b23d554fb527f82fba6b602ad2.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.f7276ed73e4921b23d554fb527f82fba6b602ad2.tar.gz)
 
 ## Changelog since v1.20.3
 
@@ -33,6 +33,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Add the config field `internal_wipe` which moves the responsibility of wiping containers after a reboot and images after an upgrade from the external binary `crio wipe` to the main crio server. This has a handful of advantages, the main one being crio is now better able to cleanup CNI resources after a reboot. ([#5014](https://github.com/cri-o/cri-o/pull/5014), [@haircommander](https://github.com/haircommander))
  - ExecSync requests now don't use conmon, instead calling the runtime directly, which reduces overhead. ([#4954](https://github.com/cri-o/cri-o/pull/4954), [@saschagrunert](https://github.com/saschagrunert))
  - Fix a bug where CRI-O prematurely stopped pulling from a blocked registry, even if there was a mirror for that registry it was allowed to pull from. ([#5034](https://github.com/cri-o/cri-o/pull/5034), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where a container exec process received a little less time than the timeout provided ([#5094](https://github.com/cri-o/cri-o/pull/5094), [@haircommander](https://github.com/haircommander))
  - Fixed runtime panic if container storage layers lockfile parent directory got removed. ([#5072](https://github.com/cri-o/cri-o/pull/5072), [@saschagrunert](https://github.com/saschagrunert))
  - Reuse connection when connecting to dbus, as well as reattempt the connection if it fails temporarily ([#5058](https://github.com/cri-o/cri-o/pull/5058), [@haircommander](https://github.com/haircommander))
 
@@ -42,7 +43,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 ## Dependencies
 
 ### Added
-_Nothing has changed._
+- github.com/rjeczalik/notify: [v0.9.2](https://github.com/rjeczalik/notify/tree/v0.9.2)
 
 ### Changed
 - github.com/containers/storage: [aa7e38b → 2ba85b4](https://github.com/containers/storage/compare/aa7e38b...2ba85b4)
