--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...e06cce2](https://github.com/cri-o/cri-o/compare/v1.21.0...e06cce2c9b68655b8d2ca6ac59c603edb462bef0) on Wed, 21 Jul 2021 10:42:33 UTC.
+[v1.21.0...0f8266d](https://github.com/cri-o/cri-o/compare/v1.21.0...0f8266dc96015b820e13213686d10ac4214999bc) on Fri, 23 Jul 2021 16:59:57 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.e06cce2c9b68655b8d2ca6ac59c603edb462bef0.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.e06cce2c9b68655b8d2ca6ac59c603edb462bef0.tar.gz)
-- [cri-o.arm64.e06cce2c9b68655b8d2ca6ac59c603edb462bef0.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.e06cce2c9b68655b8d2ca6ac59c603edb462bef0.tar.gz)
+- [cri-o.amd64.0f8266dc96015b820e13213686d10ac4214999bc.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.0f8266dc96015b820e13213686d10ac4214999bc.tar.gz)
+- [cri-o.arm64.0f8266dc96015b820e13213686d10ac4214999bc.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.0f8266dc96015b820e13213686d10ac4214999bc.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -51,6 +51,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   The klog info verbositry is converted to CRI-O debug to lower the log verbosity. ([#4973](https://github.com/cri-o/cri-o/pull/4973), [@saschagrunert](https://github.com/saschagrunert))
  - Enable the  "volatile" option for the overlay drivers when it is supported by the underlying kernel. ([#4885](https://github.com/cri-o/cri-o/pull/4885), [@giuseppe](https://github.com/giuseppe))
  - Rootless: enable resource limit when cgroup v2 controllers are delegated. ([#4528](https://github.com/cri-o/cri-o/pull/4528), [@AkihiroSuda](https://github.com/AkihiroSuda))
+ - The config field `drop_infra_ctr` is now true by default ([#5113](https://github.com/cri-o/cri-o/pull/5113), [@haircommander](https://github.com/haircommander))
  - The runtime_config_path option, which allows to specify the path of the runtime configuration file, is now supported by CRI-O.  This is specific to the VM runtime type. ([#5035](https://github.com/cri-o/cri-o/pull/5035), [@fidencio](https://github.com/fidencio))
  - Validate certificate dates for TLS metrics endpoint ([#4990](https://github.com/cri-o/cri-o/pull/4990), [@saschagrunert](https://github.com/saschagrunert))
 
