Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...0f8266d](https://github.com/cri-o/cri-o/compare/v1.21.0...0f8266dc96015b820e13213686d10ac4214999bc) on Fri, 23 Jul 2021 16:59:57 UTC.
+[v1.21.0...0fc6d47](https://github.com/cri-o/cri-o/compare/v1.21.0...0fc6d475b516b2433c1f74f06fec2c826b3708c4) on Fri, 23 Jul 2021 20:12:10 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.0f8266dc96015b820e13213686d10ac4214999bc.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.0f8266dc96015b820e13213686d10ac4214999bc.tar.gz)
-- [cri-o.arm64.0f8266dc96015b820e13213686d10ac4214999bc.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.0f8266dc96015b820e13213686d10ac4214999bc.tar.gz)
+- [cri-o.amd64.0fc6d475b516b2433c1f74f06fec2c826b3708c4.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.0fc6d475b516b2433c1f74f06fec2c826b3708c4.tar.gz)
+- [cri-o.arm64.0fc6d475b516b2433c1f74f06fec2c826b3708c4.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.0fc6d475b516b2433c1f74f06fec2c826b3708c4.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -71,6 +71,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where duplicate requests would stall even if the pod or container was already created ([#5052](https://github.com/cri-o/cri-o/pull/5052), [@haircommander](https://github.com/haircommander))
  - Fix a bug where server startup was significantly slowed down by attempting to clean up CNI resources after a reboot. ([#4929](https://github.com/cri-o/cri-o/pull/4929), [@haircommander](https://github.com/haircommander))
  - Fix a segfault when CRI-O has takes more than 8 minutes to create a pod or container ([#4834](https://github.com/cri-o/cri-o/pull/4834), [@haircommander](https://github.com/haircommander))
+ - Fix an issue where a container started with a terminal fails on exec sync calls ([#5107](https://github.com/cri-o/cri-o/pull/5107), [@haircommander](https://github.com/haircommander))
  - Fix drop ALL and add back few caps behavior to not include the default configured capabilities ([#4923](https://github.com/cri-o/cri-o/pull/4923), [@mrunalp](https://github.com/mrunalp))
  - Fixed bug where it was not possible to run containers using the default or no seccomp profile on 
   seccomp disabled builds/machines ([#4789](https://github.com/cri-o/cri-o/pull/4789), [@saschagrunert](https://github.com/saschagrunert))
