--- a/v1.21.2.md
+++ b/v1.21.2.md
@@ -14,14 +14,14 @@
 # CRI-O v1.21.2
 
 The release notes have been generated for the commit range
-[v1.21.1...b27d974](https://github.com/cri-o/cri-o/compare/v1.21.1...b27d974e13c3f9e2baa2d848ca554c80434ea88c) on Mon, 19 Jul 2021 16:24:36 UTC.
+[v1.21.1...54a5889](https://github.com/cri-o/cri-o/compare/v1.21.1...54a58899be116bf4a2022f762adf1364b670b59b) on Fri, 23 Jul 2021 21:51:10 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.b27d974e13c3f9e2baa2d848ca554c80434ea88c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.b27d974e13c3f9e2baa2d848ca554c80434ea88c.tar.gz)
-- [cri-o.arm64.b27d974e13c3f9e2baa2d848ca554c80434ea88c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.b27d974e13c3f9e2baa2d848ca554c80434ea88c.tar.gz)
+- [cri-o.amd64.54a58899be116bf4a2022f762adf1364b670b59b.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.54a58899be116bf4a2022f762adf1364b670b59b.tar.gz)
+- [cri-o.arm64.54a58899be116bf4a2022f762adf1364b670b59b.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.54a58899be116bf4a2022f762adf1364b670b59b.tar.gz)
 
 ## Changelog since v1.21.1
 
@@ -42,6 +42,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Uncategorized
  - ExecSync requests now don't use conmon, instead calling the runtime directly, which reduces overhead. ([#4962](https://github.com/cri-o/cri-o/pull/4962), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where an exec sync timeout would fail to cleanup the runtime exec process ([#5002](https://github.com/cri-o/cri-o/pull/5002), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix an issue where a container started with a terminal fails on exec sync calls ([#5121](https://github.com/cri-o/cri-o/pull/5121), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Wait for CNI plugins to be ready before starting non-host-network pods, to allow pods that may run CNI plugins to start faster ([#5084](https://github.com/cri-o/cri-o/pull/5084), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
