Update release notes

--- a/v1.20.4.md
+++ b/v1.20.4.md
@@ -13,14 +13,14 @@
 # CRI-O v1.20.4
 
 The release notes have been generated for the commit range
-[v1.20.3...f7276ed](https://github.com/cri-o/cri-o/compare/v1.20.3...f7276ed73e4921b23d554fb527f82fba6b602ad2) on Mon, 19 Jul 2021 17:10:01 UTC.
+[v1.20.3...ea842fa](https://github.com/cri-o/cri-o/compare/v1.20.3...ea842fac403002c667bbb95322f4e77ce1478e47) on Mon, 26 Jul 2021 07:07:17 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.f7276ed73e4921b23d554fb527f82fba6b602ad2.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.f7276ed73e4921b23d554fb527f82fba6b602ad2.tar.gz)
-- [cri-o.arm64.f7276ed73e4921b23d554fb527f82fba6b602ad2.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.f7276ed73e4921b23d554fb527f82fba6b602ad2.tar.gz)
+- [cri-o.amd64.ea842fac403002c667bbb95322f4e77ce1478e47.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.ea842fac403002c667bbb95322f4e77ce1478e47.tar.gz)
+- [cri-o.arm64.ea842fac403002c667bbb95322f4e77ce1478e47.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.ea842fac403002c667bbb95322f4e77ce1478e47.tar.gz)
 
 ## Changelog since v1.20.3
 
@@ -39,6 +39,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Uncategorized
  - Fix a bug where an exec sync timeout would fail to cleanup the runtime exec process ([#5000](https://github.com/cri-o/cri-o/pull/5000), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix an issue where a container started with a terminal fails on exec sync calls ([#5122](https://github.com/cri-o/cri-o/pull/5122), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
 
