Update release notes

--- a/v1.20.4.md
+++ b/v1.20.4.md
@@ -13,14 +13,14 @@
 # CRI-O v1.20.4
 
 The release notes have been generated for the commit range
-[v1.20.3...ea842fa](https://github.com/cri-o/cri-o/compare/v1.20.3...ea842fac403002c667bbb95322f4e77ce1478e47) on Mon, 26 Jul 2021 07:07:17 UTC.
+[v1.20.3...3653a41](https://github.com/cri-o/cri-o/compare/v1.20.3...3653a4125088137f80d42111dc6785d548a25688) on Mon, 26 Jul 2021 23:19:36 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.ea842fac403002c667bbb95322f4e77ce1478e47.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.ea842fac403002c667bbb95322f4e77ce1478e47.tar.gz)
-- [cri-o.arm64.ea842fac403002c667bbb95322f4e77ce1478e47.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.ea842fac403002c667bbb95322f4e77ce1478e47.tar.gz)
+- [cri-o.amd64.3653a4125088137f80d42111dc6785d548a25688.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.3653a4125088137f80d42111dc6785d548a25688.tar.gz)
+- [cri-o.arm64.3653a4125088137f80d42111dc6785d548a25688.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.3653a4125088137f80d42111dc6785d548a25688.tar.gz)
 
 ## Changelog since v1.20.3
 
@@ -34,6 +34,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - ExecSync requests now don't use conmon, instead calling the runtime directly, which reduces overhead. ([#4954](https://github.com/cri-o/cri-o/pull/4954), [@saschagrunert](https://github.com/saschagrunert))
  - Fix a bug where CRI-O prematurely stopped pulling from a blocked registry, even if there was a mirror for that registry it was allowed to pull from. ([#5034](https://github.com/cri-o/cri-o/pull/5034), [@haircommander](https://github.com/haircommander))
  - Fix a bug where a container exec process received a little less time than the timeout provided ([#5094](https://github.com/cri-o/cri-o/pull/5094), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where container storage can get corrupted if the `link` directory is missing. ([#5130](https://github.com/cri-o/cri-o/pull/5130), [@haircommander](https://github.com/haircommander))
  - Fixed runtime panic if container storage layers lockfile parent directory got removed. ([#5072](https://github.com/cri-o/cri-o/pull/5072), [@saschagrunert](https://github.com/saschagrunert))
  - Reuse connection when connecting to dbus, as well as reattempt the connection if it fails temporarily ([#5058](https://github.com/cri-o/cri-o/pull/5058), [@haircommander](https://github.com/haircommander))
 
@@ -47,7 +48,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/rjeczalik/notify: [v0.9.2](https://github.com/rjeczalik/notify/tree/v0.9.2)
 
 ### Changed
-- github.com/containers/storage: [aa7e38b → 2ba85b4](https://github.com/containers/storage/compare/aa7e38b...2ba85b4)
+- github.com/containers/storage: [aa7e38b → a308a11](https://github.com/containers/storage/compare/aa7e38b...a308a11)
 - github.com/cri-o/ocicni: [513ef78 → 4ea5fb8](https://github.com/cri-o/ocicni/compare/513ef78...4ea5fb8)
 
 ### Removed
