Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...a212a95](https://github.com/cri-o/cri-o/compare/v1.21.0...a212a95459fcf2234b1371f5307c51683ba37ff2) on Mon, 26 Jul 2021 12:09:24 UTC.
+[v1.21.0...5ab85f5](https://github.com/cri-o/cri-o/compare/v1.21.0...5ab85f5954a988db29b6e6fb70df7d24b412113e) on Tue, 27 Jul 2021 08:56:25 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.a212a95459fcf2234b1371f5307c51683ba37ff2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.a212a95459fcf2234b1371f5307c51683ba37ff2.tar.gz)
-- [cri-o.arm64.a212a95459fcf2234b1371f5307c51683ba37ff2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.a212a95459fcf2234b1371f5307c51683ba37ff2.tar.gz)
+- [cri-o.amd64.5ab85f5954a988db29b6e6fb70df7d24b412113e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.5ab85f5954a988db29b6e6fb70df7d24b412113e.tar.gz)
+- [cri-o.arm64.5ab85f5954a988db29b6e6fb70df7d24b412113e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.5ab85f5954a988db29b6e6fb70df7d24b412113e.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -88,6 +88,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Uncategorized
  - Add Particule as adopters ([#4994](https://github.com/cri-o/cri-o/pull/4994), [@ArchiFleKs](https://github.com/ArchiFleKs))
+ - Added `internal/process/defunct_processes.go` and `crio_processes_defunct` metric to collect the total number of defunct/zombie processes in a node. ([#5082](https://github.com/cri-o/cri-o/pull/5082), [@raisaat](https://github.com/raisaat))
  - Raise a warning when creating a bind mount on the container root ([#4853](https://github.com/cri-o/cri-o/pull/4853), [@giuseppe](https://github.com/giuseppe))
 
 ## Dependencies
