Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...1b8b9e4](https://github.com/cri-o/cri-o/compare/v1.21.0...1b8b9e420c5a6ec5fde8b5b3af42b427017b1e14) on Fri, 30 Jul 2021 22:05:01 UTC.
+[v1.21.0...ee8e721](https://github.com/cri-o/cri-o/compare/v1.21.0...ee8e72146ee1ebb5ce700b6a9103999573eb2af1) on Mon, 02 Aug 2021 10:18:48 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.1b8b9e420c5a6ec5fde8b5b3af42b427017b1e14.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.1b8b9e420c5a6ec5fde8b5b3af42b427017b1e14.tar.gz)
-- [cri-o.arm64.1b8b9e420c5a6ec5fde8b5b3af42b427017b1e14.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.1b8b9e420c5a6ec5fde8b5b3af42b427017b1e14.tar.gz)
+- [cri-o.amd64.ee8e72146ee1ebb5ce700b6a9103999573eb2af1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ee8e72146ee1ebb5ce700b6a9103999573eb2af1.tar.gz)
+- [cri-o.arm64.ee8e72146ee1ebb5ce700b6a9103999573eb2af1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.ee8e72146ee1ebb5ce700b6a9103999573eb2af1.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -68,6 +68,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where `crio config` would print a string for `privileged_without_host_devices`, not a boolean ([#4827](https://github.com/cri-o/cri-o/pull/4827), [@haircommander](https://github.com/haircommander))
  - Fix a bug where a container exec process received a little less time than the timeout provided ([#5067](https://github.com/cri-o/cri-o/pull/5067), [@haircommander](https://github.com/haircommander))
  - Fix a bug where an exec sync timeout would fail to cleanup the runtime exec process ([#4999](https://github.com/cri-o/cri-o/pull/4999), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where cAdvisor couldn't read the disk usage of a pod with a dropped infra container ([#5145](https://github.com/cri-o/cri-o/pull/5145), [@haircommander](https://github.com/haircommander))
  - Fix a bug where duplicate requests would stall even if the pod or container was already created ([#5052](https://github.com/cri-o/cri-o/pull/5052), [@haircommander](https://github.com/haircommander))
  - Fix a bug where server startup was significantly slowed down by attempting to clean up CNI resources after a reboot. ([#4929](https://github.com/cri-o/cri-o/pull/4929), [@haircommander](https://github.com/haircommander))
  - Fix a segfault when CRI-O has takes more than 8 minutes to create a pod or container ([#4834](https://github.com/cri-o/cri-o/pull/4834), [@haircommander](https://github.com/haircommander))
