Update release notes

--- a/v1.21.2.md
+++ b/v1.21.2.md
@@ -14,14 +14,14 @@
 # CRI-O v1.21.2
 
 The release notes have been generated for the commit range
-[v1.21.1...8d4264e](https://github.com/cri-o/cri-o/compare/v1.21.1...8d4264eafaf4cb7976ea7d800a69e43bb2038bc6) on Fri, 30 Jul 2021 08:56:57 UTC.
+[v1.21.1...3b87110](https://github.com/cri-o/cri-o/compare/v1.21.1...3b87110e2208fd889e35829d92f4400742568fa6) on Tue, 03 Aug 2021 22:15:33 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.8d4264eafaf4cb7976ea7d800a69e43bb2038bc6.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.8d4264eafaf4cb7976ea7d800a69e43bb2038bc6.tar.gz)
-- [cri-o.arm64.8d4264eafaf4cb7976ea7d800a69e43bb2038bc6.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.8d4264eafaf4cb7976ea7d800a69e43bb2038bc6.tar.gz)
+- [cri-o.amd64.3b87110e2208fd889e35829d92f4400742568fa6.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.3b87110e2208fd889e35829d92f4400742568fa6.tar.gz)
+- [cri-o.arm64.3b87110e2208fd889e35829d92f4400742568fa6.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.3b87110e2208fd889e35829d92f4400742568fa6.tar.gz)
 
 ## Changelog since v1.21.1
 
@@ -36,6 +36,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Bug or Regression
  - Allow users to customize conmon's resources if a pod is in a workload. ([#4980](https://github.com/cri-o/cri-o/pull/4980), [@haircommander](https://github.com/haircommander))
  - Fix a bug where a container exec process received a little less time than the timeout provided ([#5093](https://github.com/cri-o/cri-o/pull/5093), [@haircommander](https://github.com/haircommander))
+ - Fix a performance regression with exec probes ([#5162](https://github.com/cri-o/cri-o/pull/5162), [@haircommander](https://github.com/haircommander))
  - Fixed "layer not known" issue during image pull for corrupted `layers.json` files. ([#5015](https://github.com/cri-o/cri-o/pull/5015), [@saschagrunert](https://github.com/saschagrunert))
  - Reuse connection when connecting to dbus, as well as reattempt the connection if it fails temporarily ([#4986](https://github.com/cri-o/cri-o/pull/4986), [@haircommander](https://github.com/haircommander))
 
@@ -49,7 +50,6 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 ### Added
 - github.com/bits-and-blooms/bitset: [v1.2.0](https://github.com/bits-and-blooms/bitset/tree/v1.2.0)
-- github.com/rjeczalik/notify: [v0.9.2](https://github.com/rjeczalik/notify/tree/v0.9.2)
 
 ### Changed
 - github.com/Microsoft/go-winio: [v0.4.17 → v0.5.0](https://github.com/Microsoft/go-winio/compare/v0.4.17...v0.5.0)
