--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...a414fed](https://github.com/cri-o/cri-o/compare/v1.21.0...a414fed5131f9377daaa380e811c05f11a746a1a) on Tue, 03 Aug 2021 16:50:31 UTC.
+[v1.21.0...8d4df4e](https://github.com/cri-o/cri-o/compare/v1.21.0...8d4df4ea25cd6446f91ee9944ac92c1c726cf475) on Wed, 04 Aug 2021 10:36:21 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.a414fed5131f9377daaa380e811c05f11a746a1a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.a414fed5131f9377daaa380e811c05f11a746a1a.tar.gz)
-- [cri-o.arm64.a414fed5131f9377daaa380e811c05f11a746a1a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.a414fed5131f9377daaa380e811c05f11a746a1a.tar.gz)
+- [cri-o.amd64.8d4df4ea25cd6446f91ee9944ac92c1c726cf475.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8d4df4ea25cd6446f91ee9944ac92c1c726cf475.tar.gz)
+- [cri-o.arm64.8d4df4ea25cd6446f91ee9944ac92c1c726cf475.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8d4df4ea25cd6446f91ee9944ac92c1c726cf475.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -71,6 +71,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where cAdvisor couldn't read the disk usage of a pod with a dropped infra container ([#5145](https://github.com/cri-o/cri-o/pull/5145), [@haircommander](https://github.com/haircommander))
  - Fix a bug where duplicate requests would stall even if the pod or container was already created ([#5052](https://github.com/cri-o/cri-o/pull/5052), [@haircommander](https://github.com/haircommander))
  - Fix a bug where server startup was significantly slowed down by attempting to clean up CNI resources after a reboot. ([#4929](https://github.com/cri-o/cri-o/pull/4929), [@haircommander](https://github.com/haircommander))
+ - Fix a performance regression with exec probes ([#5136](https://github.com/cri-o/cri-o/pull/5136), [@haircommander](https://github.com/haircommander))
  - Fix a segfault when CRI-O has takes more than 8 minutes to create a pod or container ([#4834](https://github.com/cri-o/cri-o/pull/4834), [@haircommander](https://github.com/haircommander))
  - Fix an issue where a container started with a terminal fails on exec sync calls ([#5107](https://github.com/cri-o/cri-o/pull/5107), [@haircommander](https://github.com/haircommander))
  - Fix drop ALL and add back few caps behavior to not include the default configured capabilities ([#4923](https://github.com/cri-o/cri-o/pull/4923), [@mrunalp](https://github.com/mrunalp))
@@ -124,7 +125,6 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/moby/locker: [v1.0.1](https://github.com/moby/locker/tree/v1.0.1)
 - github.com/nwaples/rardecode: [v1.1.0](https://github.com/nwaples/rardecode/tree/v1.1.0)
 - github.com/pierrec/lz4/v4: [v4.0.3](https://github.com/pierrec/lz4/v4/tree/v4.0.3)
-- github.com/rjeczalik/notify: [v0.9.2](https://github.com/rjeczalik/notify/tree/v0.9.2)
 - github.com/spiegel-im-spiegel/errs: [v1.0.2](https://github.com/spiegel-im-spiegel/errs/tree/v1.0.2)
 - github.com/spiegel-im-spiegel/go-cvss: [v0.4.0](https://github.com/spiegel-im-spiegel/go-cvss/tree/v0.4.0)
 - github.com/vbauerster/mpb/v7: [v7.0.2](https://github.com/vbauerster/mpb/v7/tree/v7.0.2)
