Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...8d4df4e](https://github.com/cri-o/cri-o/compare/v1.21.0...8d4df4ea25cd6446f91ee9944ac92c1c726cf475) on Wed, 04 Aug 2021 10:36:21 UTC.
+[v1.21.0...cc72388](https://github.com/cri-o/cri-o/compare/v1.21.0...cc723883a5d1e0d880b481a8fdfda7a20deabcc8) on Wed, 04 Aug 2021 21:29:09 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.8d4df4ea25cd6446f91ee9944ac92c1c726cf475.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8d4df4ea25cd6446f91ee9944ac92c1c726cf475.tar.gz)
-- [cri-o.arm64.8d4df4ea25cd6446f91ee9944ac92c1c726cf475.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8d4df4ea25cd6446f91ee9944ac92c1c726cf475.tar.gz)
+- [cri-o.amd64.cc723883a5d1e0d880b481a8fdfda7a20deabcc8.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.cc723883a5d1e0d880b481a8fdfda7a20deabcc8.tar.gz)
+- [cri-o.arm64.cc723883a5d1e0d880b481a8fdfda7a20deabcc8.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.cc723883a5d1e0d880b481a8fdfda7a20deabcc8.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -60,6 +60,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Bug or Regression
  - Add support for `absent_mount_sources_to_reject`, which allows admins to configure paths that, when mounted into a container despite not existing on the host, causes a container creation request to fail. This is useful for paths like `/etc/hostname`, which causes trouble as a directory, but possibly shouldn't be created as a file either (in the case of a dynamic hostname). ([#4844](https://github.com/cri-o/cri-o/pull/4844), [@haircommander](https://github.com/haircommander))
+ - Add symlink /proc/mounts on /etc/mtab to container ([#5051](https://github.com/cri-o/cri-o/pull/5051), [@QiWang19](https://github.com/QiWang19))
  - Add the config field `internal_wipe` which moves the responsibility of wiping containers after a reboot and images after an upgrade from the external binary `crio wipe` to the main crio server. This has a handful of advantages, the main one being crio is now better able to cleanup CNI resources after a reboot. ([#4767](https://github.com/cri-o/cri-o/pull/4767), [@haircommander](https://github.com/haircommander))
  - Allow users to customize conmon's resources if a pod is in a workload. ([#4907](https://github.com/cri-o/cri-o/pull/4907), [@haircommander](https://github.com/haircommander))
  - Fix a bug in `internal_wipe` that would mean CNI resources would be leaked across reboots. ([#4900](https://github.com/cri-o/cri-o/pull/4900), [@haircommander](https://github.com/haircommander))
