Update release notes

--- a/v1.20.4.md
+++ b/v1.20.4.md
@@ -13,14 +13,14 @@
 # CRI-O v1.20.4
 
 The release notes have been generated for the commit range
-[v1.20.3...6287500](https://github.com/cri-o/cri-o/compare/v1.20.3...62875004fbf2b967ae96d69171fd254e1c19d510) on Fri, 30 Jul 2021 15:49:03 UTC.
+[v1.20.3...74c6592](https://github.com/cri-o/cri-o/compare/v1.20.3...74c6592d89ce81b9cacbde07911d26c3a7573747) on Thu, 05 Aug 2021 18:17:32 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.62875004fbf2b967ae96d69171fd254e1c19d510.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.62875004fbf2b967ae96d69171fd254e1c19d510.tar.gz)
-- [cri-o.arm64.62875004fbf2b967ae96d69171fd254e1c19d510.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.62875004fbf2b967ae96d69171fd254e1c19d510.tar.gz)
+- [cri-o.amd64.74c6592d89ce81b9cacbde07911d26c3a7573747.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.74c6592d89ce81b9cacbde07911d26c3a7573747.tar.gz)
+- [cri-o.arm64.74c6592d89ce81b9cacbde07911d26c3a7573747.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.74c6592d89ce81b9cacbde07911d26c3a7573747.tar.gz)
 
 ## Changelog since v1.20.3
 
@@ -35,6 +35,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where CRI-O prematurely stopped pulling from a blocked registry, even if there was a mirror for that registry it was allowed to pull from. ([#5034](https://github.com/cri-o/cri-o/pull/5034), [@haircommander](https://github.com/haircommander))
  - Fix a bug where a container exec process received a little less time than the timeout provided ([#5094](https://github.com/cri-o/cri-o/pull/5094), [@haircommander](https://github.com/haircommander))
  - Fix a bug where container storage can get corrupted if the `link` directory is missing. ([#5130](https://github.com/cri-o/cri-o/pull/5130), [@haircommander](https://github.com/haircommander))
+ - Fix a performance regression with exec probes ([#5164](https://github.com/cri-o/cri-o/pull/5164), [@haircommander](https://github.com/haircommander))
  - Fixed runtime panic if container storage layers lockfile parent directory got removed. ([#5072](https://github.com/cri-o/cri-o/pull/5072), [@saschagrunert](https://github.com/saschagrunert))
  - Reuse connection when connecting to dbus, as well as reattempt the connection if it fails temporarily ([#5058](https://github.com/cri-o/cri-o/pull/5058), [@haircommander](https://github.com/haircommander))
 
@@ -45,7 +46,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 ## Dependencies
 
 ### Added
-- github.com/rjeczalik/notify: [v0.9.2](https://github.com/rjeczalik/notify/tree/v0.9.2)
+_Nothing has changed._
 
 ### Changed
 - github.com/containers/storage: [aa7e38b → a308a11](https://github.com/containers/storage/compare/aa7e38b...a308a11)
