--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...226e658](https://github.com/cri-o/cri-o/compare/v1.21.0...226e658eae9b853e7175b74f592e33648f23b6b3) on Thu, 05 Aug 2021 05:05:52 UTC.
+[v1.21.0...6092081](https://github.com/cri-o/cri-o/compare/v1.21.0...6092081c15db3b5a102550eb5a4d6c214ea6a204) on Sat, 07 Aug 2021 23:14:29 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.226e658eae9b853e7175b74f592e33648f23b6b3.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.226e658eae9b853e7175b74f592e33648f23b6b3.tar.gz)
-- [cri-o.arm64.226e658eae9b853e7175b74f592e33648f23b6b3.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.226e658eae9b853e7175b74f592e33648f23b6b3.tar.gz)
+- [cri-o.amd64.6092081c15db3b5a102550eb5a4d6c214ea6a204.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.6092081c15db3b5a102550eb5a4d6c214ea6a204.tar.gz)
+- [cri-o.arm64.6092081c15db3b5a102550eb5a4d6c214ea6a204.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.6092081c15db3b5a102550eb5a4d6c214ea6a204.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -79,6 +79,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fixed bug where it was not possible to run containers using the default or no seccomp profile on 
   seccomp disabled builds/machines ([#4789](https://github.com/cri-o/cri-o/pull/4789), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed bug where runtime VM created containers never reach their `completed` state. ([#4803](https://github.com/cri-o/cri-o/pull/4803), [@saschagrunert](https://github.com/saschagrunert))
+ - Fixed linkmode detection for on `en_US` systems `crio version` ([#5168](https://github.com/cri-o/cri-o/pull/5168), [@saschagrunert](https://github.com/saschagrunert))
  - Re-attempt setting up conmon's cgroup if it fails on EAGAIN from dbus ([#4921](https://github.com/cri-o/cri-o/pull/4921), [@haircommander](https://github.com/haircommander))
  - Reduce the permission on the listen socket to 0660 ([#4886](https://github.com/cri-o/cri-o/pull/4886), [@haircommander](https://github.com/haircommander))
  - Reuse connection when connecting to dbus, as well as reattempt the connection if it fails temporarily ([#4974](https://github.com/cri-o/cri-o/pull/4974), [@haircommander](https://github.com/haircommander))
