Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...eb3cca9](https://github.com/cri-o/cri-o/compare/v1.21.0...eb3cca94d4a2c94ce02ee2debfb968233d8a01f3) on Mon, 09 Aug 2021 14:03:24 UTC.
+[v1.21.0...a07f02f](https://github.com/cri-o/cri-o/compare/v1.21.0...a07f02ffd6bc39cb8ad35500f83f864b7189756d) on Mon, 09 Aug 2021 18:06:32 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.eb3cca94d4a2c94ce02ee2debfb968233d8a01f3.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.eb3cca94d4a2c94ce02ee2debfb968233d8a01f3.tar.gz)
-- [cri-o.arm64.eb3cca94d4a2c94ce02ee2debfb968233d8a01f3.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.eb3cca94d4a2c94ce02ee2debfb968233d8a01f3.tar.gz)
+- [cri-o.amd64.a07f02ffd6bc39cb8ad35500f83f864b7189756d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.a07f02ffd6bc39cb8ad35500f83f864b7189756d.tar.gz)
+- [cri-o.arm64.a07f02ffd6bc39cb8ad35500f83f864b7189756d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.a07f02ffd6bc39cb8ad35500f83f864b7189756d.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -92,6 +92,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Uncategorized
  - Add Particule as adopters ([#4994](https://github.com/cri-o/cri-o/pull/4994), [@ArchiFleKs](https://github.com/ArchiFleKs))
+ - Add `--device-ownership-from-security-context` which allows an admin to specify devices be configured to be owned by the container user and group, rather than unconditionally being root. ([#4620](https://github.com/cri-o/cri-o/pull/4620), [@mythi](https://github.com/mythi))
  - Added `internal/process/defunct_processes.go` and `crio_processes_defunct` metric to collect the total number of defunct/zombie processes in a node. ([#5082](https://github.com/cri-o/cri-o/pull/5082), [@raisaat](https://github.com/raisaat))
  - Raise a warning when creating a bind mount on the container root ([#4853](https://github.com/cri-o/cri-o/pull/4853), [@giuseppe](https://github.com/giuseppe))
 
